updating the gitognore file to use the official blueprint for python based projects plus update of the compose.yaml to mount the volume

--- a/compose.yaml
+++ b/compose.yaml
@@ -1,7 +1,10 @@
-version: '2'
+version: '3'
 
 services:
   backend:
-    build: .
+    build:
+      context: .
     ports:
       - "8080:80"
+    volumes:
+      - .:/backEnd
