--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@ docker==7.0.0
 exceptiongroup==1.2.0
 fastapi==0.110.0
 h11==0.14.0
+httpcore==1.0.4
+httpx==0.27.0
 idna==3.6
 packaging==23.2
 pydantic==2.6.2
