--- a/requirements.txt
+++ b/requirements.txt
@@ -10,12 +10,16 @@ h11==0.14.0
 httpcore==1.0.4
 httpx==0.27.0
 idna==3.6
+iniconfig==2.0.0
 packaging==23.2
+pluggy==1.4.0
 pydantic==2.6.2
 pydantic_core==2.16.3
+pytest==8.0.2
 requests==2.31.0
 sniffio==1.3.0
 starlette==0.36.3
+tomli==2.0.1
 typing_extensions==4.9.0
 urllib3==2.2.1
 uvicorn==0.27.1
